--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
 .App {
   text-align: center;
+  opacity: 1;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+padding : 15px;
+font-size : 25px;
+font-weight: bolder;
+font-style:normal;
+font-family :Arial, Helvetica, sans-serif;
+background-color: rgb(226, 184, 142);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-styles{
+  padding : 12px;
+  width : 100%;
+  background-color: rgb(22, 9, 9);
   display: flex;
+  justify-content: flex-start;
+  gap :0.5rem;
+}
+.nav-buttons{
+  border: 1px solid rgb(212, 41, 41);
+  color: whitesmoke;
+  padding : 15px;
+  border-radius : 5px;
+  background-color: inherit;
+}
+.nav-buttons:hover{
+  background-color: black;
+  border: none;
+}
+.view-btn:hover{
+ background-color: rgb(9, 72, 9);
+ color : white;
+}
+
+footer{
+
+  padding: 17px;
+  font-size: larger;
+  font-weight: bolder;
+  width : 100%;
+  background-color: gray;
+}
+.user-content{
+margin : 18px;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-around;
+gap: 1rem;
+
+}
+.user-card{
+  background-color: rgb(156, 77, 77);
+  border-radius : 5px;
+  width : 250px;
+  height : 250px;
+}
+.btn{
+  padding: 10px;
+  margin : 5px;
+  border : none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size : 12px;
+}
+.edit-btn:hover{
+  background-color: blueviolet;
+}
+
+.del-btn:hover{
+  background-color: red;
+  color : white;
+ }
+ .childred{
+  height : 90vh;
+  margin : 1vh;
+  display : flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  justify-content: last baseline;
+ }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
